gerald-kong-slack/kubernetes/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
#    konghq.com/plugins: basic-auth, acl
    konghq.com/plugins: basic-auth
  labels:
    app: helloworld
  name: helloworld
  namespace: helloworld
spec:
  ingressClassName: kong
  rules:
    - host: helloworld
      http:
        paths:
          - backend:
              service:
                name: helloworld
                port:
                  number: 8080
            path: /
            pathType: Prefix
